SERVER-45892 Index operations from 4.2 mongos shouldn't abort migrations